Added installation instructions to README

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 # pip3 install -r requirements.txt
+#
+# Also need the "libs" and "data" directories which are available in this
+# repository.
+# Set the PYTHONPATH environment variable to point to where "libs" is installed,
+# e.g. for csh/tcsh:
+#
+#     setenv PYTHONPATH $HOME/Python/libs
 
 matplotlib
-pyqtgraph
-
-pyinstaller
-
-proj
 cartopy
-shapely
-
+pyserial
 xlrd
 unidecode
 pyhamtools
+scipy
+pyqtgraph
 
 # For windows
+#pyinstaller
+#proj
+#shapely
 #pywin32
